app/assets/stylesheets/ui/notices.css
.notice {
  position: relative;
  background: #95ffd5;
  color: #555;
  padding: 5px 20px;
  border-radius: 2px;
  box-shadow: 0 0 5px 0 rgba(0,0,0,0.3);
  margin-bottom: 10px;
}
.notice a {
  text-align: center;
  height: 100%;
  padding: 8px;
  line-height: 100%;
  vertical-align: middle;
  float: left;
}
.notice .actions {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
}
.notice a:hover {
  background: rgba(0,0,0,0.1);
}
.notice a:active {
  background: rgba(0,0,0,0.2);
}

.notice::before {
  content: '\f05a';
  font-family: 'FontAwesome';
  padding-right: 5px;
}

.notices .notice {
  border-radius: 0;
  box-shadow: none;
}
.notices .notice + .notice {
  border-top: solid 1px #aaa;
}
.notices .notice:last-child {
  border-radius: 0 0 2px 2px;
}

.album-notice {
  display: block;
  vertical-align: middle;
  line-height: 20px;
  font-size: 10px;
  border-top: solid 1px rgba(0,0,0,0.1);
}

.notice.site-notice {
  background: rgba(200,200,255,0.2);
}

.notice .remove {
  cursor: pointer;
}

